--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,8 +3,8 @@
 
     <form [formGroup]="form" (ngSubmit)="submit()">
         <div class="mb-3">
-            <label>Phone</label>
-            <input type="text" formControlName="phone" class="form-control" placeholder="Enter phone" />
+            <label>User Name</label>
+            <input type="text" formControlName="slug_name" class="form-control" placeholder="User Name" />
         </div>
 
         <div class="mb-3">
