--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,6 +16,6 @@
             {{ loading ? 'Logging in...' : 'Login' }}
         </button>
 
-        <div *ngIf="error" class="text-danger mt-3">{{ error }}</div>
+        <div *ngIf="error" class="mt-3 pa-1 ft-10 danger-bg">{{ error }}</div>
     </form>
 </div>
