--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -13,7 +13,7 @@ form {
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
+    // width: 300px;
 }
 
 input {
