--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+}
+
+p {
+    margin: 0;
+}
+
+/* global typography */
+html,
+body {
+    font-family: 'Poppins', system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.mt-3 {
+    margin-top: 1rem;
+}
+
+.ft-10 {
+    font-size: 10px;
+}
+
+.pa-1 {
+    padding: 8px;
+}
+
+.warning-bg {
+    background: #fff8e1;
+    border: 1px solid #ffecb3;
+}
+
+.danger-bg {
+    background: #ffe6e6;
+    border: 1px solid #ffb3b3;
+}
