--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,5 +1,4 @@
 <div>
-    <app-header></app-header>
     <div *ngIf="loading">Loading...</div>
     <div *ngIf="error">{{error}}</div>
     <ul *ngIf="products?.length" class="product-list">
@@ -7,7 +6,7 @@
             [ngClass]="{ 'qty-warning': p.quantity > 0 && p.quantity < 5, 'qty-danger': p.quantity === 0 }">
             <div class="product-item-listing">
                 <div class="product-main">
-                    <div class="product-title">{{ p.product.code }} - {{ p.product.name }}</div>
+                    <div class="product-title">{{ p.product.name }} ({{ p.product.code }})</div>
 
                 </div>
                 <div class="product-main">
