--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -61,9 +61,12 @@
 }
 
 .side-head {
-    padding: 0.5rem 0;
+    padding-bottom: 0.75rem;
     border-bottom: 1px solid var(--color-neutral-400);
-    margin-bottom: 1rem
+    margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .side-menu ul {
@@ -80,9 +83,9 @@
 }
 
 .side-close {
-    position: absolute;
-    top: 8px;
-    right: 8px;
+    // position: absolute;
+    // top: 8px;
+    // right: 8px;
     background: transparent;
     border: 0;
     font-size: 20px;
@@ -90,11 +93,30 @@
 }
 
 .side-menu li {
-    margin: 0.6rem 0
+    margin: 0.4rem 0;
 }
 
 .side-menu a {
     cursor: pointer;
     color: var(--color-neutral-800);
-    text-decoration: none
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+    padding: 0.6rem 0rem;
+    border-radius: 8px;
+}
+
+.side-menu a i {
+    width: 28px;
+    text-align: center;
+    color: var(--color-neutral-700);
+}
+
+.side-menu a span {
+    flex: 1;
+}
+
+.side-menu a:hover {
+    background: var(--color-neutral-200);
 }
