--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,9 +20,9 @@
     </div>
     <ul>
         <li>
-            <a routerLink="/products" (click)="close()">
-                <i class="fa-solid fa-box"></i>
-                <span>Products</span>
+            <a routerLink="/pos" (click)="close()" aria-label="POS">
+                <i class="fa-solid fa-desktop" aria-hidden="true"></i>
+                <span>POS</span>
             </a>
         </li>
         <li>
