--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -26,6 +26,12 @@
             </a>
         </li>
         <li>
+            <a routerLink="/customers" (click)="close()" aria-label="Customers">
+                <i class="fa-solid fa-users" aria-hidden="true"></i>
+                <span>Customers</span>
+            </a>
+        </li>
+        <li>
             <a routerLink="/profile" (click)="close()">
                 <i class="fa-solid fa-user"></i>
                 <span>Profile</span>
