--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -4,5 +4,6 @@
         <router-outlet></router-outlet>
     </main>
     <app-footer></app-footer>
-    <app-cart></app-cart>
+    <app-cart *ngIf="showCart"></app-cart>
+    <app-toast></app-toast>
 </div>
